# MLOPS

./: .gitignore  404.html  README.md  cloudbuild.yaml  data.dvc  index.html  input.csv  optuna_study.db  profile_output.prof  profile_output.txt  profiling.py  pyproject.toml  requirements.txt  run_docker_test.sh  tasks.py  test_conncect_gc.py  test_deletion.sh
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: cloud-build-trigger.yaml  cloudbuild.yaml  deploy_docs.yaml  docker-build.yaml  ml_data.yaml  tests.yaml
configs/: config.yaml
data/: index.html
data/processed/: preprocessed_data.csv
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: data.md  frontend.md  how_to_run.md  index.md  my_api.md  train.md
evaluation_metrics/: metrics.txt
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
how_to_run/: index.html
martinsKode/: martin.py
model/: index.html
my_api/: index.html
myenv/: pyvenv.cfg
outputs/2025-01-20/11-29-17/: optuna_study.db
outputs/2025-01-20/11-36-31/: optuna_study.db
outputs/2025-01-20/11-43-48/: optuna_study.db
outputs/2025-01-20/11-44-30/: optuna_study.db
outputs/2025-01-20/11-48-29/: optuna_study.db
reports/: README.md
search/: search_index.json
src/reddit_forecast/: api.py  data.py  data_drift.py  evaluate.py  model.py  train.py  visualize.py
test_outputs/: output.csv
tests/: test_api.py  test_data.py  test_model.py  test_tasks.py  test_train.py
tests/performancetests/: locustfile.py
train/: index.html
(+10 files in other folders)
