[build-system]
requires = ["setuptools", "wheel", "pydantic-core>=2.0.0"]  # Merge the dependencies
build-backend = "setuptools.build_meta"


[project]
name = "reddit_forecast"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Lucas Sylvester", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["reddit_forecast"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = 'lint.select'

[tool.coverage.run]
omit = ["tests/*"]
